[project]
name = "floor-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "alexey",email = "alexey.a.chernyshev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "ultralytics (>=8.3.66,<9.0.0)",
    "easyocr (>=1.7.2,<2.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
